# bestAI

./: .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  all_issues_final.json  all_issues_v2.json  audit_issues.json  bestPersistentAI.md  bestSmartContext.md  bestUltimateGuide.md  compliance.sh  doctor.sh  install-openclaw.sh  issue_test_failure.json  package.json  setup.sh  stats.sh
archive/: bestSmartContext.md  bestUltimateGuide.md  bestcontext.md  preBestCliAI.md
archive/vaporware/core/: Cargo.toml
archive/vaporware/core/src/: main.rs
core/: Cargo.toml
docs/: HANDBOOK.md  IT-PROJECTS.md  MASTERPLAN-V2.md  OPENCLAW.md  QUALITY-10-10.md  RESEARCH-OPENCLAW.md  RESEARCH-TEAM-NEXUS.md  UX-RESEARCH-UNIFIED-CLI.md  architecture.md  issue-governance.md  migration-guide.md  observability-schema.md  swarm-runbook.md
evals/: README.md  cache-usage-report.sh  report.sh  run.sh
hooks/: backup-enforcement.sh  check-frozen.sh  check-user-tags.sh  circuit-breaker-gate.sh  circuit-breaker.sh  confidence-gate.sh  ghost-tracker.sh  hook-event.sh  lib-dryrun.sh  lib-event-bus.sh  lib-logging.sh  lib-project.sh  manifest.json  memory-compiler.sh  observer.sh  preprocess-prompt.sh  reflector.sh  rehydrate.sh  secret-guard.sh  smart-preprocess-v2.sh  sync-gps.sh  sync-state.sh  wal-logger.sh
marketing/: hackernews-show.md  linkedin-article.md  x-launch.txt
modules/: 00-fundamentals.md  01-core.md  01-file-architecture.md  02-operations.md  02-session-management.md  03-advanced.md  03-persistence.md  04-enforcement.md  (+14 more)
(+110 files in other folders)
